--- a/project_main/pom.xml
+++ b/project_main/pom.xml
@@ -56,11 +56,11 @@
         	<version>4.12</version>
         </dependency>
 
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
-            <version>1.0.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.persistence</groupId>-->
+            <!--<artifactId>persistence-api</artifactId>-->
+            <!--<version>1.0.2</version>-->
+        <!--</dependency>-->
     </dependencies>
     <properties>
         <jersey.version>2.24.1</jersey.version>
